# langchain-guardrails

./: .gitignore  LICENSE  Readme.md  pyproject.toml
src/langchain_guardrails/: __init__.py  nemo_chain.py
tests/: test.py
